syntax = "proto3";

package metricserv;

option go_package = "./api";

enum MetricType {
  COUNTER = 0;
  GAUGE = 1;
}

message Metric {
  MetricType type = 1;
  string value = 2;
}

message AddMetricRequest {
  string metricID = 1;
  Metric metric = 2;
}

message AddMetricResponse {
}

message GetMetricRequest {
  string metricID = 1;
  MetricType type = 2;
}

message GetMetricResponse {
  string value = 2;
}

service MetricsService {
  rpc AddMetric(AddMetricRequest) returns (AddMetricResponse);
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
}